--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#108ee9</color>
+    <color name="colorPrimaryDark">#076AB1</color>
+    <color name="cerulean">#087acc</color>
+    <color name="colorAccent">@color/greyish</color>
+    <color name="grey">#e6e6e6</color>
+    <color name="darkBlue">#076ab1</color>
+    <color name="lightBlue">#40a5ed</color>
+    <color name="blue_grey">#78909c</color>
+    <color name="dark_slate_blue">#1e3461</color>
+    <color name="dark_turquoise">#06634a</color>
+    <color name="blue_dark_cover">#0E273F</color>
+    <color name="slate">#455a64</color>
+
+    <color name="blue_transparent">#a2d8ff</color>
+    <color name="blue_button">#007aff</color>
+    <color name="pale_blue">#f2f9fe</color>
+    <color name="water_blue">#0f83d8</color>
+
+    <color name="soft_blue">#567fe9</color>
+    <color name="light_blue">#a0d2f6</color>
+    <color name="dark_sky_blue">#49A9EE</color>
+    <color name="blue_one">#65d9ff</color>
+
+    <color name="azure">#108ee9</color>
+    <color name="azure_two">#008ef0</color>
+
+    <color name="turquoise_green">#00e99d</color>
+    <color name="shamrock_green">#00ce64</color>
+
+    <color name="white">#ffffff</color>
+    <color name="white_two">#fafafa</color>
+    <color name="white_three">#ededed</color>
+    <color name="white_five">#e6e6e6</color>
+    <color name="white_six">#f5f5f5</color>
+    <color name="white_seven">#f4f4f4</color>
+    <color name="white_eight">#e0e0e0</color>
+    <color name="white_nine">#f8f8f8</color>
+    <color name="white_50">#80ffffff</color>
+    <color name="white_80">#ccfcfcfc</color>
+    <color name="steel">#8e8e93</color>
+
+    <color name="black">#000</color>
+    <color name="black_10">#19000000</color>
+    <color name="black_40">#66000000</color>
+    <color name="black_60">#99000000</color>
+    <color name="black_two">#1b1b1b</color>
+    <color name="black_four">#030303</color>
+    <color name="black_five">#3b3b3b</color>
+    <color name="black_six">#212121</color>
+    <color name="black_seven">#313131</color>
+
+    <color name="grey2">#d8d8d8</color>
+    <color name="greyish">#b6b6b6</color>
+    <color name="greyish_brown">#4a4a4a</color>
+    <color name="greyish_brown_78">#c74d4d4d</color>
+    <color name="greyish_brown_two">#3d3d3d</color>
+    <color name="greyish_brown_three">#4d4d4d</color>
+    <color name="greyish_two">#bfbfbf</color>
+
+    <color name="brownish_grey">#6e6e6e</color>
+    <color name="charcoal_grey_80">#cc3b404a</color>
+    <color name="brownish_grey_two">#616161</color>
+    <color name="brownish_grey_three">#646464</color>
+    <color name="brownish_grey_four">#727272</color>
+    <color name="brown_grey">#7a7a7a</color>
+
+    <color name="mango">#fba633</color>
+    <color name="tangerine">#fb8b01</color>
+    <color name="tangerine_light">#FFFBF0</color>
+    <color name="grape_fruit">#ff5d55</color>
+    <color name="fancy_showcase_view_default_background_color">#CC000000</color>
+
+    <color name="very_light_pink">#b8b8b8</color>
+    <color name="very_light_pink_three">#e8e8e8</color>
+    <color name="very_light_pink_two">#ebebeb</color>
+    <color name="very_light_pink_four">#d6d6d6</color>
+    <color name="very_light_pink_five">#d1d1d1</color>
+    <color name="very_light_pink_six">#bfbfbf</color>
+
+    <color name="dark">#242e40</color>
+    <color name="pale_grey_two">#f1f8fc</color>
+
+
+    <color name="pale_grey_three">#fafdff</color>
+    <color name="pale_grey_four">#eef8ff</color>
+    <color name="pale_grey_five">#e1e1e1</color>
+
+    <color name="black_transparent">#80000000</color>
+    <color name="gray_playback_exo">#A6000000</color>
+    <color name="gray_buffered_exo">#4Dd8d8d8</color>
+    <color name="gray_89">#e3e3e3</color>
+    <color name="dark_brown">#313131</color>
+    <color name="black_48">#7a000000</color>
 </resources>
